--- a/_includes/team.html
+++ b/_includes/team.html
@@ -8,6 +8,11 @@
                 </div>
             </div>
             <div class="row">
+                
+            </div>
+
+
+            <!-- <div class="row">
                 {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
@@ -27,7 +32,7 @@
                     </div>
                 </div>
                 {% endfor %}
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
