added content and formatted pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,10 @@
                         <a class="page-scroll" href="#portfolio">Program</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">FAQ</a>
+                        <a class="page-scroll" href="#about">Timeline</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#faq">FAQ</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">For Investors</a>
