--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -3,46 +3,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">SARAH: Your Personal Guide Through Mental Wellness</h2>
-                    <h3 class="section-subheading text-muted">SARAH is more than just an app; it's your companion in mental wellness. Designed specifically
-                        for individuals living with suicide ideation, SARAH offers:</h3>
+                    <h2 class="section-heading">About SARAH: Empowering Lives Through Compassionate Technology</h2>
+                    <!-- <h3 class="section-subheading text-muted">About SARAH: Empowering Lives Through Compassionate Technology</h3> -->
                 </div>
                 <div class="row text-center">
-                    <div class="col-md-3">
-                        <span class="fa-stack fa-4x">
-                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa-solid fa-arrows-to-eye fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="service-heading">Personalized Assessments</h4>
-                        <p class="text-muted">SARAH carefully assesses your mental state using a
-                            proprietary algorithm that understands your unique needs.</p>
-                    </div>
-                    <div class="col-md-3">
-                        <span class="fa-stack fa-4x">
-                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="service-heading">Responsive Advice</h4>
-                        <p class="text-muted">Receive tailored advice and support that aligns with your current
-                            emotional and mental state.</p>
-                    </div>
-                    <div class="col-md-3">
-                        <span class="fa-stack fa-4x">
-                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="service-heading">Adaptive Tools</h4>
-                        <p class="text-muted">SARAH evolves with you, providing tools and resources that adapt to
-                            your changing journey.</p>
-                    </div>
-                    <div class="col-md-3">
-                        <span class="fa-stack fa-4x">
-                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa fa-headset fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="service-heading">Continuous Support</h4>
-                        <p class="text-muted">Whether you need immediate comfort or long-term strategies for
-                            coping, SARAH is always there.</p>
+                    <div class="col-lg-8 col-lg-offset-2 text-center">
+                        <p class="large text-muted">
+                            SARAH was created to bridge the gap between those living with suicide ideation and the
+                            compassionate support they deserve. We believe that everyone has the right to live a life of
+                            purpose and fulfillment, even in the face of mental health challenges.
+                        </p>
+                        <p class="large text-muted">
+                            Our app uses cutting-edge technology to assess your unique situation and deliver personalized
+                            support tools that meet your needs. SARAH isn't just about managing suicidal thoughts; it's
+                            about empowering you to live well and thrive, even in the midst of struggle.
+                        </p>
+                        <p class="large text-muted">
+                            With SARAH, you're not alone. We're here to help you navigate your journey, providing the
+                            support and resources you need to find healing and resilience.
+                        </p>
                     </div>
                 </div>
                 <!-- <div>
