--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,35 +3,53 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">SARAH: Your Personal Guide Through Mental Wellness</h2>
+                    <h3 class="section-subheading text-muted">SARAH is more than just an app; it's your companion in mental wellness. Designed specifically
+                        for individuals living with suicide ideation, SARAH offers:</h3>
                 </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <div class="row text-center">
+                    <div class="col-md-3">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa-solid fa-arrows-to-eye fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Personalized Assessments</h4>
+                        <p class="text-muted">SARAH carefully assesses your mental state using a
+                            proprietary algorithm that understands your unique needs.</p>
+                    </div>
+                    <div class="col-md-3">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Responsive Advice</h4>
+                        <p class="text-muted">Receive tailored advice and support that aligns with your current
+                            emotional and mental state.</p>
+                    </div>
+                    <div class="col-md-3">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-screwdriver-wrench fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Adaptive Tools</h4>
+                        <p class="text-muted">SARAH evolves with you, providing tools and resources that adapt to
+                            your changing journey.</p>
+                    </div>
+                    <div class="col-md-3">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-headset fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Continuous Support</h4>
+                        <p class="text-muted">Whether you need immediate comfort or long-term strategies for
+                            coping, SARAH is always there.</p>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
+                <!-- <div>
+                    <p>
+                        Take control of your mental health with SARAH and discover the strength within you.
+                    </p>
+                </div> -->
             </div>
         </div>
     </section>
