--- a/_includes/team.html
+++ b/_includes/team.html
@@ -3,39 +3,29 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">For Investors</h2>
+                    <h3 class="section-subheading text-muted">Invest in SARAH: The Future of Mental Health Care</h3>
                 </div>
             </div>
-            <div class="row">
-                
+            <div class="row">          
             </div>
-
-
-            <!-- <div class="row">
-                {% for member in site.people %}
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
-                        <h4>{{ member.name }}</h4>
-                        <p class="text-muted">{{ member.position }}</p>
-                        <ul class="list-inline social-buttons">
-                            {% for network in member.social %}
-                            <li>
-                                <a href="{{ network.url }}">
-                                    <i class="fa fa-{{ network.title }}"></i>
-                                </a>
-                            </li>
-                            {% endfor %}
-
-                        </ul>
-                    </div>
-                </div>
-                {% endfor %}
-            </div> -->
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">
+                        Join us in revolutionizing mental health care with SARAH, the app that combines cutting-edge
+                        technology with compassionate care to support individuals living with suicide ideation. Our
+                        unique approach assesses user needs with advanced algorithms and delivers personalized support
+                        that adapts to their journey.
+                    </p>
+                    <p class="large text-muted">
+                        By investing in SARAH, you are backing a solution that addresses a critical need in mental
+                        health care. Your support will help transform lives, setting a new standard in how we approach
+                        mental wellness. With SARAH, you're not just investing in technology; you're investing in hope,
+                        resilience, and a brighter future for those who need it most.
+                    </p>
+                    <p class="large text-muted">
+                        Be part of the change. Invest in SARAH today.
+                    </p>
                 </div>
             </div>
         </div>
