--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,8 +47,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <div class="intro-lead-in">Support | Assess | Respond | Adapt | Heal</div>
+                <div class="intro-heading">S.A.R.A.H.</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
