--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,11 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include test.html %}
     {% include services.html %}
-    {% include portfolio_grid.html %}
+    {% include image_text.html %}
     {% include about.html %}
     {% include faq.html %}
-    {% include team.html %}
+    {% include text_image.html %}
     {% include clients.html %}
     {% include contact.html %}
     {% include footer.html %}
