--- a/_includes/image_text.html
+++ b/_includes/image_text.html
@@ -1,4 +1,4 @@
-<section class="split-section">
+<section  id="portfolio" class="split-section">
     <div class="image-container">
         <img src="https://via.placeholder.com/600x400" alt="Placeholder Image">
     </div>
