--- a/_includes/text_image.html
+++ b/_includes/text_image.html
@@ -1,5 +1,5 @@
-<section class="split-section">
-    <div class="text-container">
+<section id="team" class="split-section">
+    <div class="text-container sm-order-2">
         <h2>For Investors</h2>
         <p class="large text-muted">
             Join us in revolutionizing mental health care with SARAH, the app that combines cutting-edge technology with compassionate care to support individuals living with suicide ideation. Our unique approach assesses user needs with advanced algorithms and delivers personalized support that adapts to their journey.
@@ -12,7 +12,7 @@
         </p>
         <a href="#contact" class="page-scroll btn btn-xl">Learn More</a>
     </div>    
-    <div class="image-container">
+    <div class="image-container sm-order-1">
         <img src="https://via.placeholder.com/600x400" alt="Placeholder Image">
     </div>
 </section>
