--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -1,6 +1,5 @@
 .split-section {
     display: flex;
-    height: 100vh; /* Full viewport height, adjust as needed */
 }
 
 .image-container, .text-container {
@@ -34,7 +33,7 @@
 .faq-section {
     max-width: 800px;
     margin: 20px auto;
-    padding: 0 20px;
+    padding: 150px 20px 0;
 }
 
 .faq {
@@ -66,4 +65,18 @@
 
 .faq-content p {
     margin: 15px 0;
+}
+
+@media(max-width: 767px) {
+    .split-section {
+        flex-direction: column;
+    }
+
+    .sm-order-1 {
+        order: 1;
+    }
+
+    .sm-order-2 {
+        order: 2;
+    }
 }
