added two photos and inverted the logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="page-scroll" href="#page-top"><img style="max-width: 200px; height: auto;" src="{{site.baseurl}}/img/logos/sarahlogoac.png" alt=""></a>
+                <a class="page-scroll" href="#page-top"><img style="max-width: 200px; height: auto;" src="{{site.baseurl}}/img/logos/sarahlogoinverted.png" alt=""></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
