--- a/_includes/text_image.html
+++ b/_includes/text_image.html
@@ -13,6 +13,7 @@
         <a href="#contact" class="page-scroll btn btn-xl">Learn More</a>
     </div>    
     <div class="image-container sm-order-1">
-        <img src="https://via.placeholder.com/600x400" alt="Placeholder Image">
+        <img style="width: 675px; height: 400px" src="{{ site.baseurl }}/img/matt-nelson-2Rb2I8TZ6O8-unsplash-min.jpg" alt="Placeholder Image">
+        <!-- "{{ site.baseurl }}/img/favicon.ico" -->
     </div>
 </section>
