--- a/_includes/image_text.html
+++ b/_includes/image_text.html
@@ -1,6 +1,6 @@
 <section  id="portfolio" class="split-section">
     <div class="image-container">
-        <img style="width: 600px; height: 400px" src="{{ site.baseurl }}/img/rasheed-kemy-oqY09oVTa3k-unsplash copy-min.jpg" alt="Placeholder Image">
+        <img class="img-dimensions" src="{{ site.baseurl }}/img/rasheed-kemy-oqY09oVTa3k-unsplash copy-min.jpg" alt="Placeholder Image">
     </div>
     <div class="text-container">
         <h2> Empowering Lives Through Compassionate Technology</h2>
