--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,12 @@
 
     {% include header.html %}
     {% include services.html %}
+    {% include who_is_sarah_for.html %}
+    {% include vimeo_video.html %}
     {% include image_text.html %}
-    {% include about.html %}
-    {% include faq.html %}
     {% include text_image.html %}
     {% include clients.html %}
+    {% include faq.html %}
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
