--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -1,4 +1,4 @@
-<section id="faq" class="faq-section">
+<section id="faq" class="faq-section section-padding">
     <div class="row">
         <div class="col-lg-12 text-center">
             <h2 class="section-heading">Frequently Asked Questions</h2>
