--- a/_includes/image_text.html
+++ b/_includes/image_text.html
@@ -1,22 +1,24 @@
 <section  id="portfolio" class="split-section">
-    <div class="image-container">
+    <div class="image-container fifty">
         <img class="img-dimensions" src="{{ site.baseurl }}/img/rasheed-kemy-oqY09oVTa3k-unsplash copy-min.jpg" alt="Placeholder Image">
     </div>
-    <div class="text-container">
-        <h2> Empowering Lives Through Compassionate Technology</h2>
-        <p class="large text-muted">
-            SARAH was created to bridge the gap between those living with suicide ideation and the
-            compassionate support they deserve. We believe that everyone has the right to live a life of
-            purpose and fulfillment, even in the face of mental health challenges.
-        </p>
-        <p class="large text-muted">
-            Our app uses cutting-edge technology to assess your unique situation and deliver personalized
-            support tools that meet your needs. SARAH isn't just about managing suicidal thoughts; it's
-            about empowering you to live well and thrive, even in the midst of struggle.
-        </p>
-        <p class="large text-muted">
-            With SARAH, you're not alone. We're here to help you navigate your journey, providing the
-            support and resources you need to find healing and resilience.
-        </p>
+    <div class="fifty">   
+        <div class="text-container">
+            <h2> Empowering Lives Through Compassionate Technology</h2>
+            <p class="large text-muted">
+                SARAH was created to bridge the gap between those living with suicide ideation and the
+                compassionate support they deserve. We believe that everyone has the right to live a life of
+                purpose and fulfillment, even in the face of mental health challenges.
+            </p>
+            <p class="large text-muted">
+                Our app uses cutting-edge technology to assess your unique situation and deliver personalized
+                support tools that meet your needs. SARAH isn't just about managing suicidal thoughts; it's
+                about empowering you to live well and thrive, even in the midst of struggle.
+            </p>
+            <p class="large text-muted">
+                With SARAH, you're not alone. We're here to help you navigate your journey, providing the
+                support and resources you need to find healing and resilience.
+            </p>
+        </div>
     </div>
 </section>
