--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,10 +1,10 @@
 <!-- Services Section -->
-    <section id="services">
+    <section id="services" class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Your Personal Guide Through Mental Wellness</h2>
-                    <h3 class="section-subheading text-muted">SARAH is more than just an app; it's your companion in mental wellness. Designed specifically
+                    <h2 class="section-heading">SARAH is more than just an app</h2>
+                    <h3 class="section-subheading text-muted">It's your companion in mental wellness. Designed specifically
                         for individuals living with suicide ideation, SARAH offers:</h3>
                 </div>
                 <div class="row text-center">
