--- a/_includes/text_image.html
+++ b/_includes/text_image.html
@@ -1,18 +1,21 @@
 <section id="team" class="split-section">
-    <div class="text-container sm-order-2">
-        <h2>For Investors</h2>
-        <p class="large text-muted">
-            Join us in revolutionizing mental health care with SARAH, the app that combines cutting-edge technology with compassionate care to support individuals living with suicide ideation. Our unique approach assesses user needs with advanced algorithms and delivers personalized support that adapts to their journey.
-        </p>
-        <p class="large text-muted">
-            By investing in SARAH, you are backing a solution that addresses a critical need in mental health care. Your support will help transform lives, setting a new standard in how we approach mental wellness. With SARAH, you're not just investing in technology; you're investing in hope, resilience, and a brighter future for those who need it most.
-        </p>
-        <p class="large text-muted">
-            Be part of the change. Invest in SARAH today.
-        </p>
-        <a href="#contact" class="page-scroll btn btn-xl">Learn More</a>
-    </div>    
-    <div class="image-container sm-order-1">
+    <div class="fifty">
+        <div class="text-container sm-order-2">
+            <h2>For Investors</h2>
+            <p class="large text-muted">
+                Join us in revolutionizing mental health care with SARAH, the app that combines cutting-edge technology with compassionate care to support individuals living with suicide ideation. Our unique approach assesses user needs with advanced algorithms and delivers personalized support that adapts to their journey.
+            </p>
+            <p class="large text-muted">
+                By investing in SARAH, you are backing a solution that addresses a critical need in mental health care. Your support will help transform lives, setting a new standard in how we approach mental wellness. With SARAH, you're not just investing in technology; you're investing in hope, resilience, and a brighter future for those who need it most.
+            </p>
+            <p class="large text-muted">
+                Be part of the change. Invest in SARAH today.
+            </p>
+            <a href="#contact" class="page-scroll btn btn-xl">Learn More</a>
+        </div>    
+    </div>
+    
+    <div class="image-container sm-order-1 fifty">
         <img class="img-dimensions" src="{{ site.baseurl }}/img/matt-nelson-2Rb2I8TZ6O8-unsplash-min.jpg" alt="Placeholder Image">
         <!-- "{{ site.baseurl }}/img/favicon.ico" -->
     </div>
