--- a/_includes/text_image.html
+++ b/_includes/text_image.html
@@ -1,4 +1,4 @@
-<section id="team" class="split-section">
+<section id="team" class="split-section" style="padding-top: 60px;">
     <div class="fifty">
         <div class="text-container sm-order-2">
             <h2>For Investors</h2>
