--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,19 +19,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Product</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Program</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">Timeline</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#faq">FAQ</a>
+                        <a class="page-scroll" href="#services">SARAH APP</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">For Investors</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#faq">FAQ</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
