--- a/_includes/who_is_sarah_for.html
+++ b/_includes/who_is_sarah_for.html
@@ -19,7 +19,7 @@
 
 .content-section {
     padding: 120px 20px;
-    background-color: #6a6aca;
+    background-color: #935ea6;
 }
 
 .section-title {
