--- a/_includes/vimeo_video.html
+++ b/_includes/vimeo_video.html
@@ -1,17 +1,13 @@
 <section class="video-section section-padding">
     <div class="text-center">
-        <h2 class="section-heading" style="max-width: 850px; margin: auto;">We are not meant to go through hard times by ourselves.</h2>
+        <h2 class="section-heading">We are not meant to go through hard times by ourselves.</h2>
     </div>
     <p class="video-description">Whatever you're going through, parnter with SARAH to find your internal strength and resilience.</p>
     <div class="video-container">
-        <iframe src="https://player.vimeo.com/video/your_video_id" 
-                width="800" 
-                height="600" 
-                frameborder="0" 
-                allow="autoplay; fullscreen" 
-                allowfullscreen>
+        <iframe src="https://player.vimeo.com/video/1007400785?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;left: 50%;transform: translateX(-50%);" title="PROJECT SARAH">
         </iframe>
     </div>
+    <script src="https://player.vimeo.com/api/player.js"></script>
 </section>
 
 <style>
@@ -32,8 +28,8 @@
 }
 
 .video-container {
-    max-width: 100%;
-    display: inline-block;
+    padding:33.25% 0 0 0;
+    position:relative;
 }
 
 iframe {
@@ -41,5 +37,11 @@ iframe {
     height: auto;
     max-width: 640px;
     border: none;
+}
+
+@media(max-width:550px){
+    .video-container {
+    padding:50.25% 0 0 0;
+}
 }
 </style>
