--- a/_includes/image_text.html
+++ b/_includes/image_text.html
@@ -1,8 +1,8 @@
 <section  id="portfolio" class="split-section">
-    <div class="image-container fifty">
+    <div class="image-container fifty sm-hundred">
         <img class="img-dimensions" src="{{ site.baseurl }}/img/rasheed-kemy-oqY09oVTa3k-unsplash copy-min.jpg" alt="Placeholder Image">
     </div>
-    <div class="fifty">   
+    <div class="fifty sm-hundred">   
         <div class="text-container">
             <h2> Empowering Lives Through Compassionate Technology</h2>
             <p class="large text-muted">
