--- a/_includes/text_image.html
+++ b/_includes/text_image.html
@@ -1,5 +1,5 @@
 <section id="team" class="split-section" style="padding-top: 60px;">
-    <div class="fifty">
+    <div class="fifty sm-hundred sm-order-2">
         <div class="text-container sm-order-2">
             <h2>For Investors</h2>
             <p class="large text-muted">
@@ -15,7 +15,7 @@
         </div>    
     </div>
     
-    <div class="image-container sm-order-1 fifty">
+    <div class="image-container sm-order-1 fifty sm-hundred">
         <img class="img-dimensions" src="{{ site.baseurl }}/img/matt-nelson-2Rb2I8TZ6O8-unsplash-min.jpg" alt="Placeholder Image">
         <!-- "{{ site.baseurl }}/img/favicon.ico" -->
     </div>
