added science and adbout us sections

--- a/_includes/vimeo_video.html
+++ b/_includes/vimeo_video.html
@@ -1,4 +1,4 @@
-<section class="video-section section-padding">
+<section class="video-section section-padding" style="padding: 150px 0 0 0">
     <div class="text-center">
         <h2 class="section-heading">We are not meant to go through hard times by ourselves.</h2>
     </div>
