--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -325,7 +325,7 @@ header .intro-text .intro-heading {
 }
 
 .section-padding {
-    padding: 100px 0;
+    padding: 100px 0 0 0 ;
 }
 
 section h2.section-heading {
