--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,12 @@
                         <a class="page-scroll" href="#services">SARAH APP</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#science-first">Science</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about-us">About Us</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#team">For Investors</a>
                     </li>
                     <li>
